...
                                .foregroundColor(.secondary) // Display medical record number
                        }
                    }
                }
            }
            .searchable(text: $searchText, placement: .navigationBarDrawer(displayMode: .always)) // Search bar for filtering
            .navigationTitle("Patients")
            .toolbar {
                Button(action: { showingAddPatient.toggle() }) { // Button to show add patient form
                    Image(systemName: "plus")
                }
            }
            .sheet(isPresented: $showingAddPatient) { // Sheet for the add patient form
...
